<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewStudent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewStudentActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="View Student" />

    <ImageView
        android:id="@+id/student_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/student_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/student_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_image" />

    <TextView
        android:id="@+id/student_name_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="36dp"
        android:text="@string/student_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_image" />

    <TextView
        android:id="@+id/student_id_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="88dp"
        android:text="@string/student_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_image" />

    <TextView
        android:id="@+id/student_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/student_id"
        app:layout_constraintStart_toStartOf="@+id/student_name_text"
        app:layout_constraintTop_toBottomOf="@+id/student_name_text" />

    <TextView
        android:id="@+id/student_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="@+id/student_name_text"
        app:layout_constraintTop_toBottomOf="@+id/student_id_text" />

    <TextView
        android:id="@+id/student_phone_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="@+id/student_name_text"
        app:layout_constraintTop_toBottomOf="@+id/student_id_text" />

    <TextView
        android:id="@+id/student_address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="@+id/student_name_text"
        app:layout_constraintTop_toBottomOf="@+id/student_phone_text" />

    <TextView
        android:id="@+id/student_address_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="@+id/student_name_text"
        app:layout_constraintTop_toBottomOf="@+id/student_phone_text" />

    <TextView
        android:id="@+id/student_checked_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/checked"
        app:layout_constraintStart_toStartOf="@+id/student_name_text"
        app:layout_constraintTop_toBottomOf="@+id/student_address_text" />


    <CheckBox
        android:id="@+id/student_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:enabled="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/student_checked_text"
        app:layout_constraintStart_toEndOf="@id/student_checked_text" />


    <Button
        android:id="@+id/edit_student_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        android:text="@string/edit_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>